bppackaging/src/objects/Vendor_Order_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>Vendor Order Line Items</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Line Item</label>
        <referenceTo>CO_Line_Item__c</referenceTo>
        <relationshipLabel>Vendor Order Line Items</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>Part__r.Last_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Excess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Excess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_From_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is From Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_required_For_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is required For Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding__c</fullName>
        <label>Outstanding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Vendor Order Line Items</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Delivery__c</fullName>
        <label>Projected Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qty_Needed__c</fullName>
        <label>Qty Needed</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Ordered__c</fullName>
        <label>Qty Ordered</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received__c</fullName>
        <label>Received Qty</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <formula>Part__r.Vendor__r.Vendor_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Order Header</label>
        <referenceTo>Vendor_Order_Header__c</referenceTo>
        <relationshipLabel>Vendor Order Line Items</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Order_Line_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Order Line Item Group</label>
        <referenceTo>Vendor_Order_Line_Item_Group__c</referenceTo>
        <relationshipLabel>Vendor Order Line Items</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Receiving_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Receiving Group</label>
        <referenceTo>Vendor_Receiving_Group__c</referenceTo>
        <relationshipLabel>Vendor Order Line Items</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Order Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Part__c</columns>
        <columns>Vendor_Order_Header__c</columns>
        <columns>Qty_Needed__c</columns>
        <columns>Qty_Ordered__c</columns>
        <columns>Is_Excess__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VOLI-{00000000}</displayFormat>
        <label>Vendor Order Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Order Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>